# learn

./: .gitignore  README.md
asm/hello_world/: Makefile  README.md  hello_world.asm
ngraph/: Makefile  README.md  eigensolver.cpp  eigensolver.hpp  main.cpp  mean.cpp  mean.hpp
pyspark/: PySpark - HDFS.ipynb  PySpark SQL - Data wrangling.ipynb  PySpark SQL - read and write.ipynb  README.md  small_job.py
pyspark/sparkify_log_small.csv/: .part-00000-81a70b3d-1c15-4f4f-9518-d50e4a11f352-c000.csv.crc  part-00000-81a70b3d-1c15-4f4f-9518-d50e4a11f352-c000.csv
rust/: README.md
rust/data_structures/: Cargo.toml
rust/data_structures/src/: lib.rs
rust/functions/: Cargo.toml
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_cargo/: Cargo.toml
rust/hello_world/: main
rust/variables/: Cargo.toml
rust/variables/src/: main.rs
rust/web/: README.md
rust/web/hello-rocket/: Cargo.toml  README.md
rust/web/hello-rocket/src/: main.rs
rust/web/requests-rocket/: Cargo.toml  README.md
rust/web/requests-rocket/src/: main.rs
xla/: CMakeLists.txt  README.md  main.cpp
